colem spas update

--- a/contactus.html
+++ b/contactus.html
@@ -7,10 +7,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+        .col-lg-4
+        {
+            padding: 5px;
+        }
+
+
         * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
+            border-radius: 20px;
         }
 
         .single-box {
@@ -23,6 +30,7 @@
         }
 
         .img-area {
+
             text-align: center;
             width: 100%;
             height: 100%;
@@ -31,6 +39,7 @@
         }
 
         .img-area img {
+            
             width: 30%;
             height: 30%;
             border-radius: 50%;
@@ -38,6 +47,7 @@
         }
 
         .flexDiv1 {
+
             width: 100%;
             display: flex;
             flex-wrap: wrap;
